# CineSense

./: .gitignore  README.md
backend/recommendation-model/: pyproject.toml
backend/recommendation-model/api/: Dockerfile  pyproject.toml
backend/recommendation-model/api/app/: main.py
backend/recommendation-model/api/app/middleware/: config.py  cors.py
backend/recommendation-model/api/app/routes/: movies.py  recommendations.py  user.py
backend/recommendation-model/api/app/schemas/: user.py
backend/recommendation-model/api/app/utils/: config.py  dependencies.py  download_model_files.py  env_config.py  load_model_files.py
backend/recommendation-model/datasets/output/: ml-latest-small-output.csv
backend/recommendation-model/training/: preprocess_dataset.py  pyproject.toml  train_model_cold_start.py  train_model_collaborative.py  train_model_reranker.py
backend/recommendation-model/training/model/: cold_start_user_tower.py  movie_tower.py  personalized_user_tower.py
backend/recommendation-model/training/post_training/: candidate_gen_model_evaluation.py  cold_start_evaluation.py  download_model_production.py  generate_user_embeddings.py  ranking_model_evaluation.py  reranker_model_evaluation.py  save_model.py  save_model_files.py  save_model_files_s3.py  save_model_local.py  save_model_production.py
backend/recommendation-model/training/preprocessing/: candidate_generation.py  clean_csv.py  cleaning.py  fetch_missing_movies.py  reranker.py
backend/recommendation-model/training/preprocessing/candidate_generation_utils/: add_movie_idx.py  cold_start_negative_sampling.py  collaborative_filtering_neg_sampling.py  fetch_missing_movies.py  filter_positive_ratings.py  movie_embedding.py  movie_metadata.py  user_cold_start_embedding.py
backend/recommendation-model/training/preprocessing/csv_cleaning_utils/: check_tmdb_id.py  fill_missing_tmdb_ids.py  find_duplicate_tmdb_ids.py  fix_mismatches.py  invalid_chars.py  normalize_ratings.py  remove_duplicate_tmdbIds.py  remove_invalid_movies.py  removie_invalid_characters.py  update_tmdb_id.py
backend/recommendation-model/training/preprocessing/reranker_utils/: avg_rating.py  generate_favorite_cast_director.py  movie_cast_director_count.py  movie_genre_features.py  (+7 more)
backend/recommendation-model/training/shared/: load_genres.py  path_config.py  split_hard_random_candidates.py
backend/recommendation-model/training/utils/: build_user_movie_dataset.py  compute_feature_overlap.py  cross_validation.py  env_config.py  extract_features.py  train_test_split.py
backend/user-api/: Dockerfile  docker-compose.yaml  pyproject.toml
backend/user-api/app/: main.py  security.py
backend/user-api/app/db/: conn.py  dbConn.py
backend/user-api/app/middleware/: auth.py  cors.py  logging.py  security.py
backend/user-api/app/models/: movieMetaData.py  ratings.py  sessions.py  users.py  watchlist.py
backend/user-api/app/routes/: auth.py  base.py  movie.py  status.py  user.py
backend/user-api/app/schemas/: movies.py  users.py
backend/user-api/app/utils/: env_config.py
backend/user-api/postgres/: schema.sql
backend/user-api/tests/integration/: health_test.py
(+206 files in other folders)
