[project]
name = "recommendation-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.119.0",
    "lightgbm>=4.6.0",
    "numpy>=2.3.4",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.12.0",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "torch==2.8.0+cu128",
    "uvicorn>=0.38.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

